syntax = "proto3";

option go_package = "github.com/prettyboiiii/bouncer/proto/bouncer";

package bouncer;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


message RegisterNewClientReq {}

message BouncerData {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
}

message GetAgeRequest {
  string bouncerId = 1;
}

service Bouncer {
  rpc RegisterNewClient (RegisterNewClientReq) returns (BouncerData);
  rpc GetAge(GetAgeRequest) returns (google.protobuf.Duration);
}